--- a/data/tabular/MUV_466/meta.yaml
+++ b/data/tabular/MUV_466/meta.yaml
@@ -32,4 +32,4 @@ bibtex:
       URL = {https://doi.org/10.1021/ci8002649}}
 templates:
     - The {#molecule|compound|chemical|molecular species|chemical compound!} with the {SMILES__description} {#representation of |!}{SMILES#} is {MUV-466#not
-      &NULL}an agonist of the S1P1 receptor
+      &NULL}{MUV-466__names__noun}.
