--- a/data/tabular/MUV_692/meta.yaml
+++ b/data/tabular/MUV_692/meta.yaml
@@ -11,6 +11,7 @@ targets:
       description: MUV-692
       names:
           - noun: an agonist of the steroidogenic factor 1 (SF-1)
+          - noun: an agonist of SF-1
 license: CC BY 4.0
 links:
     - url: https://academic.oup.com/nar/article/44/D1/D1075/2502602?login=false
@@ -32,4 +33,4 @@ bibtex:
       URL = {https://doi.org/10.1021/ci8002649}}
 templates:
     - The {#molecule|compound|chemical|molecular species|chemical compound!} with the {SMILES__description} {#representation of |!}{SMILES#} is {MUV-692#not
-      &NULL}an agonist of the steroidogenic factor 1 (SF-1)
+      &NULL}{MUV-692__names__noun}.
