--- a/data/tabular/MUV_737/meta.yaml
+++ b/data/tabular/MUV_737/meta.yaml
@@ -11,6 +11,7 @@ targets:
       description: MUV-737
       names:
           - noun: a potentiator of the estrogen receptor-alpha-coactivator binding
+          - noun: a potentiator of the ER-alpha-coact. binding
 license: CC BY 4.0
 links:
     - url: https://academic.oup.com/nar/article/44/D1/D1075/2502602?login=false
@@ -32,4 +33,4 @@ bibtex:
       URL = {https://doi.org/10.1021/ci8002649}}
 templates:
     - The {#molecule|compound|chemical|molecular species|chemical compound!} with the {SMILES__description} {#representation of |!}{SMILES#} is {MUV-737#not
-      &NULL}a potentiator of the estrogen receptor-alpha-coactivator binding
+      &NULL}{MUV-737__names__noun}.
