--- a/data/tabular/MUV_832/meta.yaml
+++ b/data/tabular/MUV_832/meta.yaml
@@ -32,4 +32,4 @@ bibtex:
       URL = {https://doi.org/10.1021/ci8002649}}
 templates:
     - The {#molecule|compound|chemical|molecular species|chemical compound!} with the {SMILES__description} {#representation of |!}{SMILES#} is {MUV-832#not
-      &NULL}an inhibitor of the Cathepsin G protease
+      &NULL}{MUV-832__names__noun}.
