--- a/data/tabular/MUV_846/meta.yaml
+++ b/data/tabular/MUV_846/meta.yaml
@@ -32,4 +32,4 @@ bibtex:
       URL = {https://doi.org/10.1021/ci8002649}}
 templates:
     - The {#molecule|compound|chemical|molecular species|chemical compound!} with the {SMILES__description} {#representation of |!}{SMILES#} is {MUV-846#not
-      &NULL}an inhibitor of factor XIa (FXIa)
+      &NULL}{MUV-846__names__noun}.
