--- a/data/tabular/MUV_859/meta.yaml
+++ b/data/tabular/MUV_859/meta.yaml
@@ -11,6 +11,7 @@ targets:
       description: MUV-859
       names:
           - noun: an allosteric inhibitor of the muscarinic acetylcholine receptor M1
+          - noun: an allosteric inhibitor of the M1 receptor
 license: CC BY 4.0
 links:
     - url: https://academic.oup.com/nar/article/44/D1/D1075/2502602?login=false
@@ -32,4 +33,4 @@ bibtex:
       URL = {https://doi.org/10.1021/ci8002649}}
 templates:
     - The {#molecule|compound|chemical|molecular species|chemical compound!} with the {SMILES__description} {#representation of |!}{SMILES#} is {MUV-859#not
-      &NULL}an allosteric inhibitor of the muscarinic acetylcholine receptor M1
+      &NULL}{MUV-859__names__noun}.
