--- a/data/tabular/qm8/meta.yaml
+++ b/data/tabular/qm8/meta.yaml
@@ -97,10 +97,10 @@ identifiers:
     - id: XYZ 
       type: XYZ
       description: XYZ file
-    - id: MOL200
+    - id: MOL2000
       type: MOL2000
       description: MOL2000 file
-    - id: MOL300
+    - id: MOL3000
       type: MOL3000
       description: MOL3000 file
 license: CC BY 4.0
@@ -155,3 +155,80 @@ bibtex:
         journal = {Chem. Sci.}
       }
 templates:
+  - The {E1-CC2__names__noun} of the {#molecule|molecule|compound!} with the {SMILES__description} {SMILES#} is {E1-CC2#} {E1-CC2__units}.
+  - The {E2-CC2__names__noun} of the {#molecule|molecule|compound!} with the {SMILES__description} {SMILES#} is {E2-CC2#} {E2-CC2__units}.
+  - The {f1-CC2__names__noun} of the {#molecule|molecule|compound!} with the {SMILES__description} {SMILES#} is {f1-CC2#} {f1-CC2__units}.
+  - The {f2-CC2__names__noun} of the {#molecule|molecule|compound!} with the {SMILES__description} {SMILES#} is {f2-CC2#} {f2-CC2__units}.
+  - The {E1-PBE0__names__noun} of the {#molecule|molecule|compound!} with the {SMILES__description} {SMILES#} is {E1-PBE0#} {E1-PBE0__units}.
+  - The {E2-PBE0__names__noun} of the {#molecule|molecule|compound!} with the {SMILES__description} {SMILES#} is {E2-PBE0#} {E2-PBE0__units}.
+  - The {f1-PBE0__names__noun} of the {#molecule|molecule|compound!} with the {SMILES__description} {SMILES#} is {f1-PBE0#} {f1-PBE0__units}.
+  - The {f2-PBE0__names__noun} of the {#molecule|molecule|compound!} with the {SMILES__description} {SMILES#} is {f2-PBE0#} {f2-PBE0__units}.
+  - The {E1-CAM__names__noun} of the {#molecule|molecule|compound!} with the {SMILES__description} {SMILES#} is {E1-CAM#} {E1-CAM__units}.
+  - The {E2-CAM__names__noun} of the {#molecule|molecule|compound!} with the {SMILES__description} {SMILES#} is {E2-CAM#} {E2-CAM__units}.
+  - The {f1-CAM__names__noun} of the {#molecule|molecule|compound!} with the {SMILES__description} {SMILES#} is {f1-CAM#} {f1-CAM__units}.
+  - The {f2-CAM__names__noun} of the {#molecule|molecule|compound!} with the {SMILES__description} {SMILES#} is {f2-CAM#} {f2-CAM__units}.
+  - |- 
+    Question: What is the {E1-CC2__names__noun} of the {#molecule|molecule|compound!} with the V2000 Molfile with the following content?
+    Description: The content of the V2000 Molfile is {MOL200#}.
+    Answer: {E1-CC2#} {E1-CC2__units}.
+  - |-
+    Question: What is the {E2-CC2__names__noun} of the {#molecule|molecule|compound!} with the V2000 Molfile with the following content?
+    Description: The content of the V2000 Molfile is {MOL200#}.
+    Answer: {E2-CC2#} {E2-CC2__units}.
+  - |-
+    Question: What is the {f1-CC2__names__noun} of the {#molecule|molecule|compound!} with the V2000 Molfile with the following content?
+    Description: The content of the V2000 Molfile is {MOL200#}.
+    Answer: {f1-CC2#} {f1-CC2__units}.
+  - |-
+    Question: What is the {f2-CC2__names__noun} of the {#molecule|molecule|compound!} with the V2000 Molfile with the following content?
+    Description: The content of the V2000 Molfile is {MOL200#}.
+    Answer: {f2-CC2#} {f2-CC2__units}.
+  - |-
+    Question: What is the {E1-PBE0__names__noun} of the {#molecule|molecule|compound!} with the V2000 Molfile with the following content?
+    Description: The content of the V2000 Molfile is {MOL200#}.
+    Answer: {E1-PBE0#} {E1-PBE0__units}.
+  - |-
+    Question: What is the {E2-PBE0__names__noun} of the {#molecule|molecule|compound!} with the V2000 Molfile with the following content?
+    Description: The content of the V2000 Molfile is {MOL200#}.
+    Answer: {E2-PBE0#} {E2-PBE0__units}.
+  - |-
+    Question: What is the {f1-PBE0__names__noun} of the {#molecule|molecule|compound!} with the V2000 Molfile with the following content?
+    Description: The content of the V2000 Molfile is {MOL200#}.
+    Answer: {f1-PBE0#} {f1-PBE0__units}.
+  - |-
+    Question: What is the {f2-PBE0__names__noun} of the {#molecule|molecule|compound!} with the V2000 Molfile with the following content?
+    Description: The content of the V2000 Molfile is {MOL200#}.
+    Answer: {f2-PBE0#} {f2-PBE0__units}.
+  - |-
+    Question: What is the {E1-CAM__names__noun} of the {#molecule|molecule|compound!} with the V2000 Molfile with the following content?
+    Description: The content of the V2000 Molfile is {MOL200#}.
+    Answer: {E1-CAM#} {E1-CAM__units}.
+  - |-
+    Question: What is the {E2-CAM__names__noun} of the {#molecule|molecule|compound!} with the V2000 Molfile with the following content?
+    Description: The content of the V2000 Molfile is {MOL200#}.
+    Answer: {E2-CAM#} {E2-CAM__units}.
+  - |-
+    Question: What is the {f1-CAM__names__noun} of the {#molecule|molecule|compound!} with the V2000 Molfile with the following content?
+    Description: The content of the V2000 Molfile is {MOL200#}.
+    Answer: {f1-CAM#} {f1-CAM__units}.
+  - |-
+    Question: What is the {f2-CAM__names__noun} of the {#molecule|molecule|compound!} with the V2000 Molfile with the following content?
+    Description: The content of the V2000 Molfile is {MOL200#}.
+    Answer: {f2-CAM#} {f2-CAM__units}.
+  - |-
+    Question: What is the {E1-CC2__names__noun} of the {#molecule|molecule|compound!} with the V3000 Molfile with the following content?
+    Description: The content of the V3000 Molfile is {MOL300#}.
+    Answer: {E1-CC2#} {E1-CC2__units}.
+  - |-
+    Question: What is the {SMILES__description} of the {#molecule|molecule|compound!} with the V3000 Molfile with the following content?
+    Description: The content of the V3000 Molfile is {MOL300#}.
+    Answer: {SMILES#}.
+  - |-
+    Question: What is the {E2-CC2__names__noun} of the {#molecule|molecule|compound!} with the V3000 Molfile with the following content?
+    Description: The content of the V3000 Molfile is {MOL300#}.
+    Answer: {E2-CC2#} {E2-CC2__units}.
+  - |- 
+    User: I want to design a {#molecule|molecule|compound!} with a particular {E1-CC2__names__noun}, {E2-CC2__names__noun}, and {f1-CC2__names__noun}.
+    Assistant: {#Cool, |Awesome, |Great, |That sounds interesting, |!}I would need to know the {E1-CC2__names__noun}, {E2-CC2__names__noun}, and {f1-CC2__names__noun} of the molecule you want to design.
+    User: The {E1-CC2__names__noun} should be {E1-CC2#} {E1-CC2__units}, the {E2-CC2__names__noun} should be {E2-CC2#} {E2-CC2__units}, and the {f1-CC2__names__noun} should be {f1-CC2#} {f1-CC2__units}.
+    Assistant: I {#recommend|suggest|propose|advise!} the {#molecule|molecule|compound!} with the V2000 Molfile with the following content: {MOL200#}.
